--- a/MyBingoCard.html
+++ b/MyBingoCard.html
@@ -9,7 +9,7 @@
     <script src="./MyBingoCard.js"></script>
 </head>
 <body>
-    <input type="button" value="Generate a Card" onclick="generateCard()" />
+    <!-- <input type="button" value="Generate a Card" onclick="generateCard()" />
 
     <div id="bingoHead">
         <h1 id="b">B</h1>
@@ -27,7 +27,7 @@
           value="Random Number!"
           onclick="Random();"
         />
-      </form>
+      </form> -->
     <!-- <div id ="bingoContent"> -->
     <!-- <h1 id="ButtonsPressed"></h1> -->
     <!-- <div class="Numbers"> -->
@@ -230,6 +230,14 @@
             </tr>
         </table> -->
     <!-- </div> -->
+    <div class="container">
+        <h1 class="t-center">Bingo Board</h1>
+        <div class="main-board m-auto board"></div>
+        <input type="button" id="randBtn" class="btn" value="Generate random number" />
+        <input type="number" id="usersNumber" class="input-field" placeholder="Number of users" value="1" />
+        <input type="button" id="userBoardBtn" class="btn" value="Generate user boards" />
+        <h5 id="randNum"></h5>
+      </div>
 
     
 </body>
